# iron-diesel-scaffold

./: .gitignore  Cargo.toml
migrations/2017-12-31-132020_initiate_tables/: down.sql  up.sql
src/: main.rs
src/controllers/: mod.rs  users.rs
src/db/: mod.rs
src/db/models/: mod.rs  users.rs
src/templates/: mod.rs
templates/: base.html  index.html  list_user.html
