[package]
name = "iron-diesel-scaffold"
version = "0.1.0"
authors = ["Hajime Fukuda <hajime.fukuda@me.com>"]

[dependencies.iron]
version = "*"

[dependencies.router]
version = "*"

[dependencies.iron_diesel_middleware]
git = "https://github.com/darayus/iron-diesel-middleware"

[dependencies]
diesel = { version = "*", features = ["sqlite"] }
dotenv = "0.9.0"