[package]
name = "iron-diesel-scaffold"
version = "0.1.0"
authors = ["Hajime Fukuda <hajime.fukuda@me.com>"]

[dependencies.iron]
version = "*"

[dependencies.router]
version = "*"

[dependencies.params]
version = "*"

[dependencies.iron_diesel_middleware]
git = "https://github.com/darayus/iron-diesel-middleware"

[dependencies]
diesel = { version = "*", features = ["sqlite"] }
dotenv = "*"
askama = { version = "*", features = ["with-iron"], git = "https://github.com/hajifkd/askama" }

[build-dependencies]
askama = { version = "*", features = ["with-iron"], git = "https://github.com/hajifkd/askama" }